<resources>
    <string name="app_name">DivulgadorEventos</string>

    <string name="Cdesc_Descricao">Content Description</string>
    <string name="nDraw_Open">Abrir navigation drawer</string>
    <string name="nDraw_Close">Fechar navigation drawer</string>
    <string name="title_activity_tela_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="Nav_TipoEvento">Tipos de eventos</string>
    <string name="Nav_Culturais">Eventos Culturais</string>
    <string name="Nav_Esportes">Eventos Esportivos</string>
    <string name="Nav_Sair">Sair</string>
    <string name="Nav_Config">Configurações</string>
    <string name="Nav_Opcoes">Opções</string>
    <string name="Nav_Informacoes">Informações</string>
    <string name="Nome_Pesquisa">Pesquisar</string>
    <string name="Nome_Configuracoes">Configurações</string>
    <string name="Nome_Alimenticios">Eventos Alimentícios</string>
    <string name="Nome_Busca">Buscar eventos</string>
    <string name="Nome_Musicais">Eventos Musicais</string>
    <string name="Nome_Gerais">Eventos Gerais</string>

    <!-- Strings das configurações gerais -->
    <string name="pref_Gerais">Configurações gerais</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_Display">Nome de Exibição</string>
    <string name="pref_nomeExibicao">Marcos Sousa</string>

    <!-- Strings da tela de sincronizaçao-->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_Intervalo">Intervalo de sincronizações</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_ringtone_silent">silenciar</string>

    <string name="pref_SincronizacaoConfig">Configurações de sincronização</string>

    <!-- Strings da tela de Design do app-->
    <string name="pref_Design">Temas do aplicativo</string>
    <string name="pref_Selecionar">Selecione o design desejado</string>
    <string name="pref_Tema">Design atual</string>
    <string name="pref_TemaDark">Design dark</string>
    <string name="title_activity_tela_maps">Map</string>
    <string name="title_activity_tela_configuracoes">Settings</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="title_activity_tela_tabbed">telaTabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tela_principal">telaPrincipal</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Tela Login & cadastro -->

    <string name="Btn_Criar">Registrar</string>
    <string name="Btn_Concordo">Concordo</string>
    <string name="Btn_Facebook">Acessar com o Facebook</string>
    <string name="Btn_Login">Entrar</string>
    <string name="Msg_Password">Digite a sua senha</string>
    <string name="Msg_Esqueceu">Esqueceu a senha?</string>
    <string name="Msg_Criar">Criar uma nova conta</string>
    <string name="Msg_Login">Faça login ou cadastre-se para ter acesso as suas
        informações pessois</string>
    <string name="Msg_Termos">Eu li e aceito os Termos de uso e também e Politica de privacidade
        do aplicativo</string>
    <string name="Msg_ou">OU</string>
    <string name="Msg_SemLogin">Acessar sem fazer login</string>
    <string name="Msg_Nome">Nome</string>
    <string name="Msg_Sobrenome">Sobrenome</string>
    <string name="Msg_Senha">Senha</string>
    <string name="Txt_Email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Erro_EmailInvalido">Este e-mail é invalido</string>
    <string name="Erro_PasswordInvalido">Esta senha é muito curta</string>
    <string name="Erro_PasswordIncorreto">Esta senha está incorreta</string>
    <string name="Erro_CampoObrigatorio">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Msg_Teste">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum."</string>

    <string name="title_activity_tela_login">Sign in</string>
    <string name="title_activity_tela_cadastro">telaCadastro</string>

</resources>
