<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference aceita atributos de EditTexts. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- NOTA: seta o tipo de valor a ser dado Input é inputType -->
    <EditTextPreference
        android:id="@+id/pref_Nome"
        android:capitalize="words"
        android:defaultValue="@string/pref_nomeExibicao"
        android:inputType="textCapWords"
        android:key="key_nomeExibicao"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_Display" />

</PreferenceScreen>
