<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:focusableInTouchMode="true"
    tools:context="com.example.joaovitor.divulgadoreventos.Interfaces.telaLogin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Img_Logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_origami"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Til_EmailLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/Txt_Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Til_SenhaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/Txt_Pw"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/Msg_Password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/Txt_Criar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="5dp"
                    android:text="@string/Msg_Criar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/CorPrimaria3"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Txt_Esqueceu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="85dp"
                    android:padding="5dp"
                    android:text="@string/Msg_Esqueceu"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/CorPrimaria3"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/Btn_Login"
                style="?android:textAppearanceSmall"
                android:layout_width="250dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/layout_botao_corner4dp"
                android:padding="10dp"
                android:text="@string/Btn_Login"
                android:textAllCaps="false"
                android:textColor="@color/CorBranca"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Txt_SemLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/Msg_SemLogin"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
