<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- Coluna 01 / linha 01 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c1l1"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Cview_c1l2"
        app:layout_constraintEnd_toStartOf="@+id/Cview_c2l1"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_theater" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nav_Culturais"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Coluna 02 / linha 01 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c2l1"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Cview_c2l2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_medal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nav_Esportes"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Coluna 01 / linha 02 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c1l2"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Cview_c1l3"
        app:layout_constraintEnd_toStartOf="@+id/Cview_c2l2"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cview_c1l1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_quaver_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome_Musicais"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Coluna 02 / linha 02 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c2l2"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Cview_c2l3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cview_c2l1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_hamburger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome_Alimenticios"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Coluna 01 / linha 03 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c1l3"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Cview_c2l3"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cview_c1l2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome_Gerais"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Coluna 02 / linha 03 -->
    <android.support.v7.widget.CardView
        android:id="@+id/Cview_c2l3"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cview_c2l2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Configurações"
                android:textAlignment="center"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3">

    </GridLayout> -->
</android.support.constraint.ConstraintLayout>